--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "cs-website",
   "version": "1.0.0",
   "description": "caffeine simulations website",
+  "homepage": "https://caffeine-simulations.github.io",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
